--- a/ClienteTwitter/src/interfaz/Login.form
+++ b/ClienteTwitter/src/interfaz/Login.form
@@ -83,11 +83,11 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="botonLogin" min="-2" pref="100" max="-2" attributes="0"/>
-                                  <Component id="jComboBox1" min="-2" pref="90" max="-2" attributes="0"/>
+                                  <Component id="jComboBoxSesiones" min="-2" pref="90" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="11" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -103,7 +103,7 @@
                       <Component id="jLabelLogo" min="-2" pref="309" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jComboBox1" min="-2" pref="29" max="-2" attributes="0"/>
+                          <Component id="jComboBoxSesiones" min="-2" pref="29" max="-2" attributes="0"/>
                           <Component id="jswitchRecordar" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
@@ -167,7 +167,7 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonDeleteActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JComboBox" name="jComboBox1">
+            <Component class="javax.swing.JComboBox" name="jComboBoxSesiones">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="4">
@@ -184,9 +184,6 @@
             </Component>
             <Container class="jswitch.Jswitch" name="jswitchRecordar">
               <Properties>
-                <Property name="backgroundColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="f3" green="a1" red="38" type="rgb"/>
-                </Property>
                 <Property name="onOff" type="boolean" value="false"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[50, 30]"/>
