--- a/ClienteTwitter/src/interfaz/JavaHelp.form
+++ b/ClienteTwitter/src/interfaz/JavaHelp.form
@@ -109,7 +109,7 @@
                       <Component id="jButtonLogin" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jButtonInformes" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="160" max="32767" attributes="0"/>
+                  <EmptySpace pref="186" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -127,6 +127,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Login"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonLoginActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonInformes">
           <Properties>
